# streams-of-data-processing

./: .pre-commit-config.yaml  Makefile  README.md  code_structure.md  output.txt  pyproject.toml
data/msds/: get_msds_data.sh
data/msds/data/: .gitignore
data/msds/data/minidot/: minidot_file.txt
data/msds/data/solinst/: solinst_data_file.csv
data/msds/data/ysi/: ysi_file.xlsx
data/msds/log-sheet/minidot/: minidot-log-sheet-file.xlsx
data/msds/log-sheet/solinst/: solinst-log-sheet-file.xlsx
data/msds/log-sheet/ysi/: ysi-log-sheet-file.xlsx
pre-processing-config/: pre-processing-minidot.json  pre-processing-solinst.json  pre-processing-ysi.json
src/: OrganizationMsds.py  main.py
src/OrganizationProcessing/: org_processing_util.py
src/OrganizationProcessing/OrganizationMsds/: OrganizationMsds.py  minidotPreprocess.py  msds_processing_util.py  solinstPreprocess.py  ysiPreprocess.py
src/data_viz/: data_viz.py
src/data_warehousing/: data_warehousing.py
src/database/: setup_database.py
src/file_upload/: file_upload.py
src/processing/: processing.py
src/validation/: post_validation.py  pre_validation.py
