[tool.poetry]
name = "streams-of-data-processing"
version = "0.1.0"
description = ""
authors = ["alex-antonison-mtsu <aantonison@mtsu.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
