[tool.poetry]
name = "streams-of-data-processing"
version = "0.1.0"
description = ""
authors = ["alex-antonison-mtsu <aantonison@mtsu.edu>"]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.3"
boto3 = "^1.24.49"
awswrangler = "^2.16.1"
openpyxl = "^3.0.10"
pandas = "^1.4.3"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["src", "tests"]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=120
skip=".vscode, .tox, .git"
default_section="THIRDPARTY"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
addopts = "--strict-markers -v"
markers = ["unit_test",
]
testpaths = "tests"

[tool.black]
line-length = 120
exclude = '''
/(
  # Directories
    \.eggs
  | \.git
  | \.vscode
  | \.tox
  | \.venv
  | \.ropeproject
  | build
  | venv
  | .*egg-info
)/
'''